Change image source

--- a/ANPR_Final.ipynb
+++ b/ANPR_Final.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['5\\n', '6\\n', 'D\\n', '0\\n', '9\\n', '6\\n', '6\\n']\n"
+      "['1\\n', '2\\n', 'A\\n', '0\\n', '4\\n', '8\\n', '7\\n', '4\\n']\n"
      ]
     }
    ],
@@ -25,7 +25,7 @@
     "    origin = cv2.boundingRect(contour)\n",
     "    return ((origin[1] // tolerance_factor) * tolerance_factor) * cols + origin[0]\n",
     "\n",
-    "origin = cv2.imread(\"images/5498.jpg\",0)\n",
+    "origin = cv2.imread(\"images/1.png\",0)\n",
     "# origin = cv2.imread(\"image1.jpg\",0)\n",
     "img = origin.copy()\n",
     "r1 = img.shape[0]*1.0/600\n",
